--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-./mvp.txt
+mvp.txt
 
 # dependencies
 /node_modules
